# diction

./: .gitignore  .lintstagedrc  .prettierignore  CLAUDE.md  README.md  cspell.json  package.json
.claude/: ARCHITECTURE.md  DESIGN.md  DIAGRAMS.md  REQUIREMENTS.md  ROADMAP.md
.claude/context/: api.md  calibration.md  ci.md  development.md  drills.md  feedback.md  frontend.md  index.md  interview.md  research.md  scoring.md  storage.md  tts.md
.claude/standards/: architecture.md  context.md  design.md  editorial.md  index.md  prose.md  requirements.md  roadmap.md  rule.md  skill.md  snippets.md  tasks.md  versioning.md  wireframes.md
.claude/wireframes/: app-shell.md  ear-training.md  free-topic.md  index.md  interview.md  minimal-pair-production.md  passage-scoring.md  progress-dashboard.md  routine.md  session-history.md  shadowing.md  stress-intonation.md  targeted-drills.md
.cspell/: ipa.txt  project-terms.txt  tech-stack.txt
.github/workflows/: verify.yml
backend/: .coveragerc  .env.example  .gitignore  mypy.ini  package.json  pyproject.toml  ruff.toml
backend/calibration/: .gitignore  CASE_STUDY.md  CONTRAST_EVAL.md  EYE_CONTACT_EVAL.md  FLUENCY_EVAL.md  NOTES.md  README.md  analyze.py  baselines.json  contrast_eval.json  contrast_eval.py  contrast_plots.py  fluency_eval.py  fluency_model.json  fluency_plots.py  measure.py  plots.py  validate.py
backend/calibration/data/: contrast_eval.json  distributions.json  eye_contact_eval.json  fluency_model.json
backend/calibration/scripts/: analyze.py  contrast_eval.py  contrast_plots.py  eye_contact_eval.py  eye_contact_plots.py  fluency_eval.py  fluency_plots.py  measure.py  plots.py  validate.py
backend/scripts/: verify.sh
backend/src/diction/: app.py  config.py  main.py
backend/src/diction/api/: content.py  drills.py  free_topic.py  health.py  interview.py  minimal_pairs.py  passages.py  prosody.py  reference.py  resurfacing.py  schemas.py  sessions.py  voices.py  weak_sounds.py
backend/src/diction/db/: engine.py  models.py
backend/src/diction/drills/: minimal_pairs_data.py
backend/src/diction/feedback/: base.py  critique_llm.py  explainer_llm.py  generator_llm.py  types.py
backend/src/diction/interview/: base.py  face.py  pose.py  questions.py  scorer_cv.py  types.py
backend/src/diction/scoring/: audio.py  base.py  fluency.py  gop.py  phoneme_baselines.py  prosody.py  prosody_base.py  prosody_real.py  resurfacing.py  scorer_gop.py  text.py  transcription.py  transcription_base.py  types.py
backend/src/diction/storage/: drills.py  interview.py  recordings.py  resurfacing.py  sessions.py  weak_sounds.py
backend/src/diction/tts/: base.py  cache.py  synth_kokoro.py  synth_piper.py  voices.py
backend/tests/: test_api_resurfacing.py  test_audio.py  test_content.py  test_drills.py  test_feedback.py  test_fixtures_regression.py  test_fluency.py  test_free_topic.py  test_gop.py  test_interview.py  test_interview_questions.py  test_interview_regression.py  test_interview_score.py  test_main.py  test_minimal_pairs.py  test_passages.py  test_prosody.py  test_reference.py  test_resurfacing.py  test_run_modes.py  test_sessions.py  test_storage_drills.py  test_storage_resurfacing.py  test_storage_sessions.py  test_storage_weak_sounds.py  test_synth_warmup.py  test_text.py  test_tts_cache.py  test_voices.py  test_weak_sounds.py
backend/tests/fixtures/interview/: manifest.json  manifest.md
backend/tests/fixtures/recordings/: manifest.json  manifest.md
frontend/: .gitignore  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: home.spec.ts  interview.spec.ts  passage-scoring.spec.ts  production-drill.spec.ts  progress-dashboard.spec.ts  reference-audio.spec.ts  routine.spec.ts  screenshot.ts  session-history.spec.ts  shadowing.spec.ts  stress-intonation.spec.ts  targeted-drills.spec.ts  voice-picker.spec.ts
scripts/: dev.sh
wiki/: index.md
(+147 files in other folders)
