[project]
name = "diction-backend"
version = "0.0.0"
description = "Local pronunciation-training backend: FastAPI serving the speech pipeline"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.32",
]

# Opt-in model stack. Install with `uv sync --extra scoring`.
[project.optional-dependencies]
scoring = [
    "faster-whisper>=1.0",
    "numpy>=2.0",
    "phonemizer-fork>=3.3",
    "soundfile>=0.12",
    "torch>=2.7",
    "torchaudio>=2.7",
    "transformers>=4.44",
]

# Opt-in local-LLM feedback stack. Install with `uv sync --extra feedback`.
feedback = [
    "ollama>=0.4",
]

# Opt-in interview CV stack. Install with `uv sync --extra interview`.
interview = [
    "av>=12",
    "mediapipe>=0.10",
]

# Opt-in local TTS for native reference audio. Install with `uv sync --extra tts`.
tts = [
    "kokoro>=0.9",
    "misaki[en]>=0.9",
    "espeakng-loader>=0.2",
    "en-core-web-sm",
]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.27",
]

# torch/torchaudio for the RTX 5090 (Blackwell) need the CUDA 12.8 wheels.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
